Footer fix on mobile

--- a/FitnessClothingCatalog/public_html/estilo/responsividade.css
+++ b/FitnessClothingCatalog/public_html/estilo/responsividade.css
@@ -83,7 +83,8 @@
     } */
    
     #rodape{
-        padding-left: 2%;
+        padding: 1% 2% 4vh;
+        width: 100%;
     }
     
     .logo-contato{
